# MinceraftClone

./: .gitignore  CMakeLists.txt  LICENSE  README.md  br.bat  br.sh  br2.bat  build.bat  clear-obj.bat  clear.bat  config.makefile  game.cfg  gv.bat  make_run.bat  makefile  makefile-nux  makefile-win  setup.bat
assets/: UpdateFont.cpp  atlas.psd  font.fnt  font.txt  updateFont.bat
save/demo/: -----_-----.ccm  -----_00000.ccm  00000_-----.ccm  00000_00000.ccm
shaders/: blockHitbox.frag  blockHitbox.vert  blur.frag  crosshair.frag  crosshair.vert  curBlock.frag  curBlock.vert  font.frag  font.vert  main.frag  main.shader  main.vert  toLDR.frag  vertex.shader
src/: AO.cpp  AO.h  Area.h  BlockProperties.h  BlocksData.cpp  BlocksData.h  Chunk.h  ChunkCoord.h  ChunkGen.cpp  ChunkGen.h  Chunks.h  Config.cpp  Config.h  Font.cpp  Font.h  Lighting.cpp  Lighting.h  LightingPropagation.h  Liquid.cpp  Liquid.h  Main.cpp  MeanCounter.h  Misc.h  MiscChunk.h  NeighbouringEmitters.h  PerlinNoise.h  Physics.cpp  Position.h  Read.h  ShaderLoader.cpp  ShaderLoader.h  Trace.h  Unit.h  Units.h  UpdateFont.cpp  Vector.h  Viewport.h
src/SDF/: Main.cpp
src/font/: Font.h
src/game/: AO.cpp  Area.h  BlockProperties.h  BlocksData.cpp  BlocksData.h  CMakeLists.txt  Chunk.h  ChunkGen.cpp  ChunkGen.h  Config.cpp  Config.h  Counter.h  Lighting.cpp  Lighting.h  LightingPropagation.h  Liquid.cpp  Main.cpp  Misc.h  MiscChunk.h  NeighbouringEmitters.h  Physics.cpp  Physics.h  Position.h  ShaderLoader.cpp  ShaderLoader.h  TextRenderer.cpp  TextRenderer.h  Unit.h  Units.h  Vector.h
src/image/: Read.h  SaveBMP.h
